# tafsk

./: .editorconfig  .gitignore  CHANGELOG  Cargo.toml  README.md  maskfile.md  rustfmt.toml
doc/man/: tafsk.1.zst
scripts/: manpage.nu  manpage_rust_vars.nu
src/: commands.rs  datetime.rs  main.rs  store.rs
tasks/: .config
tasks/20251214-054319.6ed872e3/: TASK.md
tasks/20251214-055754.e2a0ae79/: TASK.md
tasks/20251214-055909.84734018/: TASK.md
tasks/20251218-032834.52f7edca/: TASK.md
tasks/20251218-203911.3fba64d6/: TASK.md
tasks/20251218-203950.d8cb2b6c/: TASK.md
tasks/20251219-010809.f3fe84e5/: TASK.md
tests/: cli.rs
